--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,9 @@
 language: rust
 rust:
-    - stable
+  - stable
+  - nightly
+cache: cargo
+before_install:
+  - sudo add-apt-repository -y ppa:team-xbmc/ppa
+  - sudo apt-get update -qq
+  - sudo apt-get install -y libegl1-mesa-dev libgles2-mesa-dev libsdl2-dev
