--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ cache: cargo
 before_install:
   - sudo add-apt-repository -y ppa:team-xbmc/ppa
   - sudo apt-get update -qq
-  - sudo apt-get install -y libegl1-mesa-dev libgles2-mesa-dev libsdl2-dev
+  - sudo apt-get install -y libegl1-mesa-dev libgles2-mesa-dev libsdl2-dev libsdl2-ttf-dev
