--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "glider"
 version = "0.1.0"
 authors = ["Alexandre Hamez <alexandre.hamez@gmail.com>"]
+edition = "2018"
 
 [dependencies]
 clap = "2.31.1"
