--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Dependencies
       run: |
         sudo apt-get update -y -qq
-        sudo apt-get install libsdl2-dev
+        sudo apt-get install -y libsdl2-dev libsdl2-ttf-dev
     - name: Build
       run: cargo build --verbose
     - name: Run tests
